--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
           NAME: ""
           VERSION: ""
         run: |
-          jq '.name' package.json >>NAME
+          jq -r '.name' package.json >>NAME
           echo $NAME
-          jq '.version' package.json >> VERSION
+          jq -r '.version' package.json >> VERSION
           echo $VERSION
           echo "name=$NAME" >> $GITHUB_ENV 
           echo "version=$VERSION" >> $GITHUB_ENV 
