--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
           ''' -i ./k8s/deployment.yaml
 
           kubectl create service clusterip api-node-teste-service-0 --namespace=vkpr \
-          --tcp=: --dry-run=client -o=yaml > ./k8s/service.yaml
+          --tcp=5000:5000 --dry-run=client -o=yaml > ./k8s/service.yaml
           yq e '''
           .metadata.annotations."sidecar.opentelemetry.io/inject"= "true" |
           .metadata.annotations."instrumentation.opentelemetry.io/inject-java"= "true" |
