--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -167,8 +167,61 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Creating K8s Artifacts
+        run: |
+          mkdir k8s/
+          mkdir config/
+          touch config/api-node-teste.yaml
+          kubectl create deployment api-node-teste --namespace=vkpr --port=5000 --replicas=1 \
+          --image=docker.io/valberjunior/${{ env.name }}:${{ env.version }} --dry-run=client -o=yaml > ./k8s/deployment.yaml
+          yq e '''
+          .metadata.labels."backstage.io/kubernetes-id"= "api-node-teste" |
+          .spec.template.metadata.labels."backstage.io/kubernetes-id"= "api-node-teste" |
+          .spec.template.spec.containers[0].imagePullPolicy= "IfNotPresent" |
+          .spec.template.spec.containers[0].resources.requests.memory= "256Mi" |
+          .spec.template.spec.containers[0].resources.limits.memory= "768Mi" |
+          .spec.template.metadata.annotations."sidecar.opentelemetry.io/inject"= "true" |
+          .spec.template.metadata.annotations."instrumentation.opentelemetry.io/inject-java"= "true" |
+          del(.status) | del(.metadata.creationTimestamp) | del(.spec.template.metadata.creationTimestamp) | del(.spec.strategy)
+          ''' -i ./k8s/deployment.yaml
+
+          kubectl create service clusterip api-node-teste-service-0 --namespace=vkpr \
+          --tcp=5000:5000 --dry-run=client -o=yaml > ./k8s/service.yaml
+          yq e '''
+          .metadata.annotations."sidecar.opentelemetry.io/inject"= "true" |
+          .metadata.annotations."instrumentation.opentelemetry.io/inject-java"= "true" |
+          del(.metadata.creationTimestamp) | del(.status) |
+          .metadata.labels."backstage.io/kubernetes-id"="api-node-teste"''' -i ./k8s/service.yaml
+          yq e '.spec.selector.app="api-node-teste"' -i ./k8s/service.yaml
+
+          kubectl create ingress api-node-teste --class=kong --namespace=vkpr \
+          --annotation "cert-manager.io/cluster-issuer"="certmanager-issuer" \
+          --annotation "konghq.com/https-redirect-status-code"="308" \
+          --annotation "kubernetes.io/tls-acme"="true" \
+          --annotation "konghq.com/strip-path"="true" \
+          --annotation "konghq.com/preserve-host"="true" \
+          --annotation "konghq.com/protocols"="https" \
+          --annotation "sidecar.opentelemetry.io/inject"="true" \
+          --annotation "instrumentation.opentelemetry.io/inject-java"="true" \
+          --rule="rest.apr.vee.codes/api-node-teste*=api-node-teste-service-0:5000,tls=rest.apr.vee.codes-tls" --dry-run=client -o=yaml > ./k8s/ingress.yaml
+          yq e 'del(.metadata.creationTimestamp) | del(.status)' -i ./k8s/ingress.yaml
+          yq e '.metadata.labels."backstage.io/kubernetes-id"="api-node-teste"' -i ./k8s/ingress.yaml
+
+          yq e '''
+              .apiVersion="argoproj.io/v1alpha1" |
+              .kind="Application" |
+              .metadata.name="api-node-teste" |
+              .metadata.namespace="argocd" |
+              .spec.project="default" |
+              .spec.source.repoURL="https://github.com/.git" |
+              .spec.source.targetRevision="" |
+              .spec.source.path="api-node-teste/" |
+              .spec.syncPolicy.automated.prune=true |
+              .spec.destination.server="https://kubernetes.default.svc" |
+              .spec.destination.namespace="vkpr"''' -i config/api-node-teste.yaml
           
       - name: Vkpr apply
         run: |
           aws eks update-kubeconfig --name ${{ secrets.CLUSTER_NAME}} --region ${{ secrets.AWS_REGION }}
-          kubectl apply -f ./api 
+          kubectl apply -f ./k8s 
