--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,3 +174,15 @@ jobs:
         run: |
           aws eks update-kubeconfig --name ${{ secrets.CLUSTER_NAME}} --region ${{ secrets.AWS_REGION }}
           kubectl apply -f ./k8s 
+
+      - name: Publish to spec house
+        uses: dmnemec/copy_file_to_another_repo_action@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          destination_branch: master
+          source_file:  'api'
+          destination_repo: veecode-platform/devportal-catalog
+          destination_folder: '/'
+          user_name: ${{ github.actor }}
+          commit_message: 'Pipeline commit'  
