--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,6 +3,7 @@ kind: Component
 metadata:
   name: "api-node-teste"
   description: "Teste de Template"
+  publishedAt: "2024-04-15 17:48:24"
   annotations:
     github.com/project-slug: ValberJunior/api-node-teste
     backstage.io/techdocs-ref: dir:.
