--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "api-node-teste"
   description: "Teste de Template"
   labels:
-    publishedAt: "2024-04-15 17:48:24"
+    publishedAt: 2024-04-15 17:48:24
   annotations:
     github.com/project-slug: ValberJunior/api-node-teste
     backstage.io/techdocs-ref: dir:.
