--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,8 +4,8 @@ metadata:
   name: "api-node-teste"
   description: The place to be, for great node component
   labels:
-    - example.com/custom: 'custom_label_value'
-    - publishedAt: '2024-04-15 17:48:24'
+    example.com/custom: 'custom_label_value'
+  #  - publishedAt: '2024-04-15 17:48:24'
   links:
     - title: Website
       url: https://www.globo.com/
