--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "api-node-teste"
   description: The place to be, for great node component
   labels:
-    published/at: 'custom_label_value'
+     example.com/custom: 'custom_label_value'
   #  - publishedAt: '2024-04-15 17:48:24'
   annotations:
     github.com/project-slug: ValberJunior/api-node-teste
