--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   name: "api-node-teste"
   description: The place to be, for great node component
-  environments:
+  environment:
     subnets: ["subnetxpto","subnetxyz","subnetefla"]
   annotations:
     github.com/project-slug: ValberJunior/api-node-teste
